# ros-audio-convert

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
scripts/: convert_bag2wav_batch.sh
src/: bag2wav.cpp
test/: audio.bag
