<package>
   <name>audio_convert</name>
   <version>0.1.0</version>
   <description>
      Outputs audio to a WAV file from a rosbag.
   </description>
   <maintainer email="simn.brodeur@gmail.com">Simon Brodeur</maintainer>
   <author>Simon Brodeur</author>
   <license>BSD</license>

   <buildtool_depend>catkin</buildtool_depend>

   <build_depend>roscpp</build_depend>
   <build_depend>audio_common_msgs</build_depend>
   <build_depend>libgstreamer1.0-dev</build_depend>
   <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>

   <run_depend>roscpp</run_depend>
   <run_depend>audio_common_msgs</run_depend>
   <run_depend>gstreamer1.0</run_depend>
   <run_depend>gstreamer1.0-plugins-base</run_depend>
   <run_depend>gstreamer1.0-plugins-ugly</run_depend>
   <run_depend>gstreamer1.0-plugins-good</run_depend>

</package>


